# GDE

./: .gitignore  BACKEND_COMPLETION_SUMMARY.md  CREDENCIALES.md  DASHBOARD_SETUP.md  DOCKER_COMPLETE_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_GUIDE.md  DOCKER_QUICK_START.md  DOCKER_STATUS.md  INTEGRACION_COMPLETA.md  PROBLEMA_RESUELTO.md  PROJECT_SUMMARY.md  PRUEBA_SERVIDOR.md  README.md  TESTING_DASHBOARD.md  base_datos.md  contrato.md  docker-compose.yml  docker-manage.sh  env.docker  nginx.conf
.github/workflows/: backend-tests.yml
docs/api/: README.md
docs/backend/: README.md
docs/database/: README.md  entities.md  security.md
docs/deployment/: README.md
docs/frontend/: README.md  auth.md  components.md  dashboard.md
gde-backend/: .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  ERROR_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  START_SERVER.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  env.docker  env.example  nginx.conf  pyproject.toml  quick_fix.sh  requirements-test.txt  requirements.txt  setup_env.sh
gde-backend/app/: __init__.py  main.py
gde-backend/app/api/: __init__.py  dependencies.py
gde-backend/app/api/v1/: __init__.py  audit.py  auth.py  costos.py  dashboard.py  files.py  guias.py  kardex.py  notifications.py  pistoleo.py  products.py  reports.py
gde-backend/app/core/: config.py  database.py  exceptions.py  security.py
gde-backend/app/models/: __init__.py  audit.py  base.py  config.py  costo.py  guia.py  notification.py  pistoleo.py  product.py  user.py
gde-backend/app/schemas/: __init__.py  audit.py  common.py  config.py  costo.py  guia.py  notification.py  pistoleo.py  product.py  user.py
gde-backend/app/services/: costo_service.py  file_service.py  guia_service.py  kardex_service.py  notification_service.py  pistoleo_service.py  product_service.py  report_service.py
gde-backend/scripts/: init_db.py  start.py
gde-backend/tests/: .gitkeep  README.md  __init__.py  conftest.py  pytest.ini  test_api_auth.py  test_api_costos.py  test_api_dashboard.py  test_api_guias.py  test_api_kardex.py  test_api_products.py  test_models.py  test_services.py  utils.py
